# product-video

./: .env.example  .gitignore  RAG_RESEARCH_GUIDE.md  README.md  ingest_knowledge.py  pyproject.toml  requirements.txt  start_dev.sh  test_rag_integration.py  validate_migration.py
.claude/: beautify-commit.local.md
docs/: 11labs.md  ACTION_PLAN.md  AG_UI_INTEGRATION_GUIDE.md  FIXES_README.md  SUMMARY.md  V2_README.md  ag-ui-streamline-guide.md  instructor.md  music_generation_strategy.md
frontend/: next.config.ts  package-lock.json  package.json
remotion/: package.json  remotion.config.ts  tsconfig.json
remotion/scripts/: measure-layers.js  render-still.ts  render.ts  test-render.ts
remotion/src/: Root.tsx
remotion_renderer/: test_spec.json
scripts/: add_music.py  debug_captures.py  gen_audio_and_mux.py  migrate_old.py  regenerate_music_and_mux.py  test_editor_text_only.py  test_llm_prompt.py  test_music_fix.py  trim_static_frames.py  video_configs.json
src/: __init__.py  config.py  main.py  pipeline.py  restart_editor.py  test_composer_v2.py  test_imports.py
src/agents/: __init__.py  analyzer_agent.py  capturer_agent.py
src/backend/: __init__.py  adapter.py  event_translator.py  server.py
src/db/: __init__.py  supabase_client.py
src/editor/: __init__.py  assembler.py  clip_composer.py  graph.py  loader.py  planner.py  state.py  text_composer.py
src/orchestrator/: __init__.py  aggregate.py  aggregate_fixed.py  analyzer.py  capturer.py  graph.py  intake.py  session.py  state.py
tests/: test_basic.py  test_render_pipeline.py
(+81 files in other folders)
